Fix some Overflows

--- a/src/app/main/components/industrypartners/components/add-industry-partner/add-industry-partner.component.scss
+++ b/src/app/main/components/industrypartners/components/add-industry-partner/add-industry-partner.component.scss
@@ -81,7 +81,9 @@ a {
   display: none;
   overflow-x: hidden;
   flex: 1;
-  overflow-y: auto;
+  overflow-y: scroll;
+  height: 100%;
+
   // padding: 20px 15px;
 }
 
@@ -105,8 +107,7 @@ a {
     overflow: hidden;
     flex-direction: column;
     width: 960px;
-    height: fit-content;
-    max-height: 80vh;
+    height: 95vh;
 
     .header {
         display: flex;
@@ -136,7 +137,7 @@ a {
         display: flex;
         flex-direction: column;
         padding: 10px;
-        overflow-y: auto;
+        overflow-y: scroll;
     }
 
     input,
@@ -152,8 +153,8 @@ a {
     .form-content {
         display: flex;
         flex-direction: column;
-        padding: 40px 30px;
-
+        padding-inline: 30px;
+        padding-block: 60px;
 
         h3 {
             color: var(--primary-color);
@@ -217,19 +218,19 @@ a {
             transition: background-color 200ms;
             left: 10px;
         }
-    }
 
-    .btn {
+      .btn {
         display: flex;
         justify-content: end;
         margin-top: 20px;
         padding: 5px;
+        padding-bottom: 20px;
 
         button {
             font-size: 15px;
             border: none;
-            background-color: var(--primary-color);
-            border: 2px solid var(--primary-color);
+            background-color: var(--main-orange);
+            border: 2px solid var(--main-orange);
             color: #ffffff;
             padding: 6px;
             width: 100px;
@@ -250,8 +251,10 @@ a {
             background-color: #bbbbbb;
             color: white;
           }
+      }
     }
 }
+
 
 .upload-box {
   display: block;
@@ -281,11 +284,13 @@ a {
 .file-preview {
   margin-top: 1rem;
 
+
   img {
     max-width: 100%;
     height: auto;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+
   }
 
   p {
